docs: add complete README for JavaFX login project